Finished html&css, working on JS and api data

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="weather">
-        <input type="search" class="weather__search" placeholder="Your City">
+        <input type="search" class="weather__search" placeholder="Search for a city... (press ENTER)">
         <div class="weather__today">
             <div class="weather__details">
                 <h2 class="weather__city">City</h2>          
-                <p class="weather__day">Day</p>  
+                <p class="weather__date">Date</p>  
                 <div class="weather__current">
                     <p class="weather__indicator weather__indicator--humidity"><span class="value">50</span>%</p>
                     <p class="weather__indicator weather__indicator--wind"><span class="value">West, 5</span>m/s</p>
@@ -22,7 +22,9 @@
             <img src="images/clear-sky.png" alt="Clear Sky" class="weather__image">
             <div class="weather__temperature">
                 <span class="value">+25</span>&deg;C
+                <div class="weather__temperature__feels-like">Feels like: <span class="value"></span></div>
             </div>
+            
         </div>
         <div class="weather__forecast">
             <article class="weather_forecast__item">
@@ -53,7 +55,7 @@
         </div>
     </div>
 
-
+    <script type='text/javascript' src='config.js'></script>
     <script src="js/script.js"></script>
 </body>
 </html>
