--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
     <link rel="stylesheet" href="css/style.css">
+    <!-- add icon link -->
+    <link rel="icon" href="https://cdn.iconscout.com/icon/free/png-512/weather-191-461610.png" type="image/x-icon">
 </head>
 <body>
     <div class="weather">
