added env variable

--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
             </article>
         </div>
     </div>
-
-    <script src="js/script.js"></script>
+    <script type="module" src="js/script.js"></script>
 </body>
 </html>
