--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             </article>
         </div>
     </div>
+<script type="module" src="js/config.js"></script>
     <script type="module" src="js/script.js"></script>
 </body>
 </html>
